--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "qrcode.vue": "^1.6.1",
     "vant": "^1.4.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
